syntax = "proto3";

package com.voteva.quiz.grpc.service.v1;

import "common/model/CommonModels.proto";
import "quiz/v1/model/QuizModels.proto";

option java_multiple_files = true;


service QuizServiceV1 {

    rpc addUser (com.voteva.quiz.grpc.model.v1.GUserUidRequest) returns (com.voteva.quiz.grpc.model.v1.GUserResponse);

    rpc assignTest (com.voteva.quiz.grpc.model.v1.GUser2TestAssignRequest) returns (com.voteva.quiz.grpc.model.v1.GUser2TestResponse);

    rpc setTestResults (com.voteva.quiz.grpc.model.v1.GUser2TestResultRequest) returns (com.voteva.quiz.grpc.model.v1.GUser2TestResponse);

    rpc setAdminGrants (com.voteva.quiz.grpc.model.v1.GUserUidRequest) returns (com.voteva.common.grpc.model.Empty);

    rpc removeAdminGrants (com.voteva.quiz.grpc.model.v1.GUserUidRequest) returns (com.voteva.common.grpc.model.Empty);

    rpc blockUser (com.voteva.quiz.grpc.model.v1.GUserUidRequest) returns (com.voteva.common.grpc.model.Empty);

    rpc unblockUser (com.voteva.quiz.grpc.model.v1.GUserUidRequest) returns (com.voteva.common.grpc.model.Empty);

}
